Fixed gravity of content EditText widget. Added 'submit' button to edit_item view

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
 	
 	<string name="item_title">Drink Name</string>
 	<string name="item_body">Ingredients</string>
+	<string name="submit">Add Drink</string>
 </resources>
