--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,5 @@
 	<string name="item_title">Drink Name</string>
 	<string name="item_ingredients">Ingredients</string>
 	<string name="item_body">Instructions</string>
-	<string name="submit">Add Drink</string>
+	<string name="submit">Submit</string>
 </resources>
