Added characteristics button to edit_item.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
 	<string name="item_title">Drink Name</string>
 	<string name="item_ingredients">Ingredients</string>
 	<string name="item_body">Instructions</string>
+	<string name="categories">Characteristics</string>
 	<string name="submit">Submit</string>
 </resources>
